--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
     <title>kaya app</title>
-    <link rel="icon" href="statics/quasar-logo.png" type="image/x-icon">
+    <link rel="icon" href="statics/logo/kaya.png" type="image/x-icon">
   </head>
   <body>
     <div id="q-root"></div>
